# subunit-desktop

./: .env.example  .gitignore  README.md  index.html  package.json  release.sh  test_dev_injection  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
deploy/sni-live/: README.md  deploy.sh  patch.mjs
deploy/u1chat-messenger/: README.md  auth-widening.sh  bridge.sh  deploy.sh
deploy/u1chat-messenger/baseline/: SHA256SUMS  db.ts  email.ts  server.ts
deploy/u1chat-messenger/next/: claude.ts  db.ts  server.ts
deploy/u1chat-messenger/patches/: attachments-on-delete.py  bot-module.py  review-hardening.py  wave-editdelete.py  wave-groups.py  wave-media-reconciled.py  wave-reactions.py  wave-readstate.py  wave-reply.py  widening.py
deploy/u1chat-messenger/recon/: server.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  assistant.rs  auth.rs  commands.rs  config.rs  http.rs  ingest.rs  lib.rs  main.rs  remote.rs  sessions.rs  terminal.rs
src/components/: AccountChip.tsx  Avatar.tsx  CommandPalette.tsx  Markdown.tsx  Sidebar.tsx  SubunitMark.tsx  TopBar.tsx  U1Assistant.tsx  UpdateButton.tsx  icons.tsx
src/lib/: auth.ts  config.ts  ipc.ts  modules.tsx  sni.ts  sse.ts  u1chat.ts
src/modules/: Call.tsx  Chat.tsx  ComingSoon.tsx  Echo.tsx  WebFrame.tsx
src/modules/atlas/: AtlasModule.tsx  atlas.css  index.ts
src/modules/atlas/components/: AtlasLogo.tsx  ChatThread.tsx  CitationText.tsx  DocumentList.tsx  EmptyState.tsx  Icons.tsx  KnowledgeCompass.tsx  (+6 more)
src/modules/synapse/: SynapseModule.tsx  index.ts
src/plugin/: host.tsx  loader.ts  types.ts
src/plugins/atlas/: index.tsx
src/plugins/call/: index.tsx
src/plugins/chat/: convo.tsx  index.tsx  lanes.tsx  style.tsx
src/plugins/cortex/: agents.ts  index.tsx
src/plugins/dashboard/: C1.tsx  Cockpit.tsx  ServerLane.tsx  XtermView.tsx  index.tsx
src/plugins/echo/: index.tsx
src/plugins/email/: index.tsx
src/plugins/marketplace/: index.tsx
src/plugins/meet/: index.tsx
src/plugins/settings/: index.tsx
src/plugins/sni/: SNI-PLAN.md  agents.ts  index.tsx
src/plugins/synapse/: index.tsx
src/plugins/team/: index.tsx
src/routes/: ModuleHost.tsx
src/styles/: subunit-liquid-glass.css
(+14 files in other folders)
