[package]
name = "subunit-desktop"
version = "0.5.12"
description = "Subunit — desktop shell hosting Atlas, Synapse, Chat, Call & Echo (Tauri 2)"
authors = ["Subunit UG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "subunit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api keeps parity with echo-tauri's shell (transparent/vibrancy
# windows on macOS). Not App Store eligible — fine for internal distribution.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
# File + stdout logging (diagnostics).
tauri-plugin-log = "2"
# Single-instance: a second launch focuses the running window instead of
# spawning a rival process fighting over the tray / config file.
tauri-plugin-single-instance = "2.4.2"
# Crash/error reporting (rustls transport — no OpenSSL). No-op without a DSN.
sentry = { version = "0.34", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
dirs = "5"
once_cell = "1"
log = "0.4"
# OAuth loopback CSRF state + JWT email claim decode (auth.rs).
rand = "0.8"
base64 = "0.22"
# HTTP client (rustls — no OpenSSL link). Used by the auth refresh path.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "blocking",
] }
# Async runtime — the periodic update-check loop in lib.rs uses tokio::time::sleep
# on Tauri's async runtime (which is tokio under the hood).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Local PTY terminals (terminal.rs) — plugins spawn + drive real shells/claude.
portable-pty = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
# Window-level tweaks for the glass shell chrome (parity with echo-tauri overlay).
objc = "0.2"

[features]
default = []
